--- a/css/tournament_stats.css
+++ b/css/tournament_stats.css
@@ -77,7 +77,7 @@
 
 /* Фиксированная ширина колонок второго уровня (с ячейками ответов) */
 .stats-table tr:nth-child(2) th:nth-child(n+2):nth-child(-n+8) {
-    width: 40px; /* Ширина для колонок с 2 цифрами (от 0 до 80) */
+    width: 35px; /* Уменьшенная ширина для колонок с ответами */
 }
 
 /* Настройка ширины остальных колонок */
@@ -90,7 +90,7 @@
 }
 
 .stats-table tr:nth-child(2) th:nth-child(10) {
-    width: 100px; /* Очки (увеличено с 70px для поддержки больших чисел) */
+    width: 120px; /* Увеличенная ширина для колонки с очками */
 }
 
 .stats-table tr:nth-child(2) th:nth-child(11) {
@@ -103,6 +103,23 @@
     position: sticky;
     top: 0;
     z-index: 10;
+}
+
+/* Добавляем значок сортировки для сортируемых колонок */
+.stats-table th[onclick]::after {
+    content: " ↕"; /* Добавляем стрелки вверх-вниз */
+    font-size: 0.8em;
+    opacity: 0.7;
+}
+
+/* Убираем значок сортировки для первой строки в шапке таблицы, где есть colspan */
+.stats-table tr:first-child th[colspan]::after {
+    content: none;
+}
+
+/* Убираем значок сортировки для пустых th во второй строке шапки */
+.stats-table tr:nth-child(2) th:empty::after {
+    content: none;
 }
 
 .stats-table th.column-group {
@@ -157,7 +174,7 @@
     background-color: rgba(241, 196, 15, 0.3);
 }
 
-/* Стили для заголовков с цветом */
+/* Стили для заголовков с цветом и значком сортировки */
 th.correct-fast, th.correct-medium, th.correct-slow,
 th.wrong-fast, th.wrong-medium, th.wrong-slow,
 th.timeout {
@@ -169,14 +186,14 @@ th.timeout {
 th.correct-fast::after, th.correct-medium::after, th.correct-slow::after,
 th.wrong-fast::after, th.wrong-medium::after, th.wrong-slow::after,
 th.timeout::after {
-    content: '';
+    content: " ↕";
+    color: black;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: inherit;
-    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 0.8em;
+    opacity: 0.7;
 }
 
 .total-answers {
@@ -190,8 +207,9 @@ th.timeout::after {
 }
 
 .prize {
-    background-color: rgba(155, 89, 182, 0.2);
+    background-color: white;
     font-weight: bold;
+    border: 1px solid rgba(155, 89, 182, 0.2);
 }
 
 /* Стили для информации о турнире */
