--- a/css/styles.css
+++ b/css/styles.css
@@ -51,16 +51,16 @@ header {
 }
 
 .site-title a {
-    color: white;
+    color: inherit;
     text-decoration: none;
 }
 
 .site-title a:visited {
-    color: white;
+    color: inherit;
 }
 
 .site-title a:hover {
-    color: white;
+    color: inherit;
     text-decoration: none;
 }
 
@@ -152,7 +152,12 @@ p {
     }
 
     nav ul li {
-        margin: 10px;
+        margin: 5px;
+    }
+    
+    nav ul li a {
+        padding: 5px 7px;
+        font-size: 14px;
     }
 
     .container {
@@ -169,6 +174,32 @@ p {
 
     main {
         padding-top: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    nav ul li {
+        margin: 3px;
+    }
+    
+    nav ul li a {
+        padding: 4px 5px;
+        font-size: 13px;
+    }
+    
+    .container {
+        padding: 0 5px;
+    }
+    
+    .page-title {
+        font-size: 1.8em;
+    }
+}
+
+@media (max-width: 360px) {
+    .btn-primary, .btn-secondary {
+        font-size: 0.8em;
+        padding: 10px 12px;
     }
 }
 
@@ -245,13 +276,6 @@ li {
     .btn-primary, .btn-secondary {
         padding: 12px 15px;
         font-size: 0.9em;
-    }
-}
-
-@media (max-width: 360px) {
-    .btn-primary, .btn-secondary {
-        font-size: 0.8em;
-        padding: 10px 12px;
     }
 }
 
